--- a/events.saltydog.com/index.html
+++ b/events.saltydog.com/index.html
@@ -539,7 +539,7 @@ color: #000;
             <h4>Visiting South Beach with Kids?</h4>
             </div>
             <div class="col-4">
-            <a href="https://saltydog.com/sd/kids.html" >
+            <a href="https://saltydog.com/kids" >
                 <div class="sk_fb_event_tab_option tab-grid-events" style="width: auto; display: block; border-radius: 0px; background-color: rgb(17, 79, 120); color: rgb(255, 255, 255);">Kid's Fun</div>
                        
                    
