--- a/bohicket.saltydog.com/index.html
+++ b/bohicket.saltydog.com/index.html
@@ -136,7 +136,7 @@
       </article>
       <article class="row">
 
-            <div class="one sixth three-up-small-tablet two-up-mobile padded "><a href="http://saltydogcafe.com/webcams/webcams.html"><img src="https://saltydog.com/images/bohicket/BODOGWEBCAM.png" class="img-fluid"
+            <div class="one sixth three-up-small-tablet two-up-mobile padded "><a href="http://saltydogcafe.com/webcams/bodog.html"><img src="https://saltydog.com/images/bohicket/BODOGWEBCAM.png" class="img-fluid"
                 style="width:90%;" class="rounded" alt="Jake's Pizza hanging sign and out door seating."></a>
            <h6>webcams</h6>
          </div>
