update from server

--- a/selfie.saltydog.com/test.html
+++ b/selfie.saltydog.com/test.html
@@ -254,7 +254,7 @@ function killSession() {
     xhr.send();
 }
         var audioElement = document.createElement('audio');
-        audioElement.setAttribute('src', 'https://saltydog.com/src/shutter.mp3');
+        audioElement.setAttribute('src', 'http://saltydog.com/src/shutter.mp3');
         //audioElement.setAttribute('autoplay', 'autoplay');
         //audioElement.load()
 
